build/log/idf_py_stderr_output_75199
In file included from /home/pi/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:66,
                 from /home/pi/esp32/esp-idf/components/esp_http_server/include/esp_http_server.h:12,
                 from /home/pi/httptc/main/web_server.h:4,
                 from /home/pi/httptc/main/httptc.c:2:
/home/pi/httptc/main/httptc.c: In function 'temperature_task':
/home/pi/httptc/main/httptc.c:24:34: error: 'ouput_delay_ms' undeclared (first use in this function); did you mean 'output_delay_ms'?
   24 |         vTaskDelay(pdMS_TO_TICKS(ouput_delay_ms));
      |                                  ^~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/projdefs.h:46:81: note: in definition of macro 'pdMS_TO_TICKS'
   46 |     #define pdMS_TO_TICKS( xTimeInMs )    ( ( TickType_t ) ( ( ( TickType_t ) ( xTimeInMs ) * ( TickType_t ) configTICK_RATE_HZ ) / ( TickType_t ) 1000U ) )
      |                                                                                 ^~~~~~~~~
/home/pi/httptc/main/httptc.c:24:34: note: each undeclared identifier is reported only once for each function it appears in
   24 |         vTaskDelay(pdMS_TO_TICKS(ouput_delay_ms));
      |                                  ^~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/projdefs.h:46:81: note: in definition of macro 'pdMS_TO_TICKS'
   46 |     #define pdMS_TO_TICKS( xTimeInMs )    ( ( TickType_t ) ( ( ( TickType_t ) ( xTimeInMs ) * ( TickType_t ) configTICK_RATE_HZ ) / ( TickType_t ) 1000U ) )
      |                                                                                 ^~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/httptc.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/pi/httptc/main/web_server.c:13:17: warning: 'output_delay_ms' initialized and declared 'extern'
   13 | extern uint32_t output_delay_ms = 1000;
      |                 ^~~~~~~~~~~~~~~
/home/pi/httptc/main/web_server.c:104:6: error: conflicting types for 'start_webserver'; have 'void(void)'
  104 | void start_webserver(void) {
      |      ^~~~~~~~~~~~~~~
In file included from /home/pi/httptc/main/web_server.c:1:
/home/pi/httptc/main/web_server.h:6:16: note: previous declaration of 'start_webserver' with type 'void *(void)'
    6 | httpd_handle_t start_webserver(void);
      |                ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:134: esp-idf/main/CMakeFiles/__idf_main.dir/web_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
